--- a/roster.html
+++ b/roster.html
@@ -186,8 +186,10 @@ B3 ROSTER
              Pending Confirmation
              Final
              <!-- col: 14, 38 -->
-<!-- <span id = "paraChangelog" style = "display:none"> -->
-<b>Changelog</b> -  #1 (Sat 04/07, 12:17)   Draft #1</span>
+<!-- <span id = "paraChangelog" style = "display:none">    -->
+<b>Changelog</b> -  #3 (Sun 05/07, 16:50)   [Final]<span id = "paraChangelog" style = "display:none">
+             #2 (Sun 05/07, 15:24)   [Pending Confirmation]
+             #1 (Sat 04/07, 12:17)   Draft #1</span>
 <span id = "mydivChangelog" style = "cursor:hand;color:royalblue" onclick = "expandContractChangelog();">             [+]</span>
 
 <b>Photos</b> -     <a href="https://www.flickr.com/gp/131712031@N02/Ft83xa">2014</a>, <a href="https://www.flickr.com/gp/131712031@N02/C314Q0">2015</a>, <a href="https://www.flickr.com/gp/131712031@N02/vtX8i9" target="_blank">2016</a>, <!--<a href="https://flic.kr/s/aHskUctFbt" target="_blank">2017</a>--><a href="https://unit-zero.myDS.me/photo/?t=Albums/album_62332032303137#Albums/album_62332032303137" target="_blank"><b>2017</b></a>, <a href="https://unit-zero.myDS.me/photo/?t=Albums/album_62332032303138#Albums/album_62332032303138" target="_blank"><b>2018</b></a>, <a href="https://unit-zero.myDS.me:5001/mo/sharing/BjnSIvuRa" target="_blank"><b>2019</b></a><span id="LastUpdatePhotos">(checking...)</span>
