--- a/roster.html
+++ b/roster.html
@@ -182,9 +182,9 @@ alt="shopify traffic stats"></a></div></noscript>
 
 B3 ROSTER
 
-<b>Status</b> -  <b><mark>>> Draft <<</mark></b>
+<b>Status</b> -     Draft
              Pending Confirmation
-             Final
+          <b><mark>>> Final <<</mark></b>
              <!-- col: 14, 38 -->
 <!-- <span id = "paraChangelog" style = "display:none">    -->
 <b>Changelog</b> -  #3 (Sun 05/07, 16:50)   [Final]<span id = "paraChangelog" style = "display:none">
