--- a/roster.html
+++ b/roster.html
@@ -215,44 +215,6 @@ B3 ROSTER
 
              <a href="http://www.b3cafe.com.au/private/LC-Schedule.pdf">LC-Schedule.pdf</a>
 
-             <mark style="background-color:#FF9090;"> <b>UPDATE 22/3 - Coronavirus 2020 !!</b> </mark>
-             Guys, not sure what's gonna happen this week. How many
-             days we will be open will depend on tightening government
-             restrictions, and also how many customers are still even
-             in the city. Every day we will evaulate for the next day.
-             Be aware that there is a high chance that one day,
-             suddenly, we will have to close. If you need financial
-             assistance at any time, please let me know asap. We can
-             definitely help!
-
-             <mark style="background-color:#FF9090;"> <b>Coronavirus 2020 !!</b> </mark>
-             Hey guys, as you've been hearing, coronavrius seems to
-             be spreading more and more. The symptoms are similar to
-             a cold or flu. If you feel a bit strange, please let us
-             know !
-
-             There's a lot of cancelled events and shutdowns of
-             offices at this time. So, we do not know how business
-             will go in the near future. We will let you know as
-             soon as we can about any changes, e.g. less stock,
-             closed days. We simply do not know how serious the
-             government will force restrictions.
-
-             In the meantime, we will reduce shifts for this week.
-             Guys, stay safe, practice cleanliness, check
-             your vitamin supplements ! A strong immune system will
-             help a lot against any viruses and sicknesses. This is
-             some that I recommend -
-             <a href ="https://www.chemistwarehouse.com.au/buy/54904/Healthy-Care-Vitamin-C-500mg-Chewable-500-Tablets" >Vitamin C</a> - <a href ="https://www.chemistwarehouse.com.au/buy/64071/healthy-care-vitamin-d3-1000iu-250-softgel-capsules?rcid=722">Vitamin D</a> - <a href ="https://www.chemistwarehouse.com.au/buy/55504/healthy-care-super-multi-chewable-berry-200-tablets?rcid=722">Multivitamin</a>
-
-
-             <mark style="background-color:#99CCFF;"> <b>Sabrina back n Melbourne !!</b> </mark>
-             Sabrina let me know she is back in Melbourne since last
-             week on Thursday. Just to be safe, she will self-isolate
-             for 2 weeks. She will return to B3 on week starting
-             Monday 23 March !</a>
-
-
              <mark style="background-color:#ffff7f;"> <b>0. Square machines and declined sales</b> </mark>
              During a card sale, please take a few extra seconds
              to confirm the payment goes through successfully. It's
@@ -346,7 +308,7 @@ It's going to be quiet for a while, but hopefully will be busy again
 before too long.
 
 |=====================================================================|
-| For week starting    Mon       06/07/20  DRAFT                      |
+| For week starting    Mon       06/07/20                             |
 |=====================================================================|
 | Pos   Time           Mon       Tue       Wed       Thu      Fri     |
 |---------------------------------------------------------------------|
