--- a/roster.html
+++ b/roster.html
@@ -213,7 +213,7 @@ B3 ROSTER
 <b>News -</b>       <span id = "mydiv" style = "cursor:hand;color:royalblue" onclick = "expandContract();">[+] </span> <span id="LastUpdateNews"> (checking..) </span>
 <div id = "para" style = "display:none">
 
-             <a href="http://www.b3cafe.com.au/private/LC-Schedule.pdf">LC-Schedule.pdf</a>
+             <a href="https://www.b3cafe.com.au/private/LC-Schedule.pdf">LC-Schedule.pdf</a>
 
              <mark style="background-color:#ffff7f;"> <b>0. Square machines and declined sales</b> </mark>
              During a card sale, please take a few extra seconds
