--- a/roster.html
+++ b/roster.html
@@ -187,7 +187,8 @@ B3 ROSTER
              Final
              <!-- col: 14, 38 -->
 <!-- <span id = "paraChangelog" style = "display:none">    -->
-<b>Changelog</b> -  #1 (Sat 11/07, 09:50)   Draft #1</span>
+<b>Changelog</b> -  #2 (Sun 12/07, 09:46)   Draft #2
+             #1 (Sat 11/07, 09:50)   Draft #1</span>
 <span id = "mydivChangelog" style = "cursor:hand;color:royalblue" onclick = "expandContractChangelog();">             [+]</span>
 
 <b>Photos</b> -     <a href="https://www.flickr.com/gp/131712031@N02/Ft83xa">2014</a>, <a href="https://www.flickr.com/gp/131712031@N02/C314Q0">2015</a>, <a href="https://www.flickr.com/gp/131712031@N02/vtX8i9" target="_blank">2016</a>, <!--<a href="https://flic.kr/s/aHskUctFbt" target="_blank">2017</a>--><a href="https://unit-zero.myDS.me/photo/?t=Albums/album_62332032303137#Albums/album_62332032303137" target="_blank"><b>2017</b></a>, <a href="https://unit-zero.myDS.me/photo/?t=Albums/album_62332032303138#Albums/album_62332032303138" target="_blank"><b>2018</b></a>, <a href="https://unit-zero.myDS.me:5001/mo/sharing/BjnSIvuRa" target="_blank"><b>2019</b></a><span id="LastUpdatePhotos">(checking...)</span>
@@ -306,7 +307,7 @@ It's going to be quiet for a while, but hopefully will be busy again
 before too long.
 
 |=====================================================================|
-| For week starting    Mon       13/07/20  DRAFT                      |
+| For week starting    Mon       13/07/20                             |
 |=====================================================================|
 | Pos   Time           Mon       Tue       Wed       Thu      Fri     |
 |---------------------------------------------------------------------|
@@ -317,8 +318,8 @@ before too long.
 | c    1000-1400|4.0+  []        Bea       Bea       Bea      Bea     |
 |                                                                     |
 |       LC                                                            |
-| d    0700-1400|7.0   Sean      Yui       Sean      Sean     Yui     |
-| c'   1400-1500|+1.0  []        Bea       Bea       Bea      Bea     |
+| d    0700-1400|7.0   Yui       Yui       Sean      Sean     Sean    |
+| c'   1400-1500|+1.0  []        Bea       []        Bea      Bea     |
 |                                                                     |
 |=====================================================================|</em>
 <!--
