--- a/roster.html
+++ b/roster.html
@@ -182,12 +182,13 @@ alt="shopify traffic stats"></a></div></noscript>
 
 B3 ROSTER
 
-<b>Status</b> -  <b><mark>>> Draft <<</mark></b>
-             Pending Confirmation
+<b>Status</b> -     Draft
+        <b><mark>>> Pending Confirmation <<</mark></b>
              Final
              <!-- col: 14, 38 -->
 <!-- <span id = "paraChangelog" style = "display:none">    -->
-<b>Changelog</b> -  #2 (Sun 12/07, 09:46)   Draft #2
+<b>Changelog</b> -  #2 (Sun 12/07, 09:46)   [Pending Confirmation]
+                                     Draft #2
              #1 (Sat 11/07, 09:50)   Draft #1</span>
 <span id = "mydivChangelog" style = "cursor:hand;color:royalblue" onclick = "expandContractChangelog();">             [+]</span>
 
@@ -315,7 +316,7 @@ before too long.
 |       CP                                                            |
 | a    0700-1630|9.5   Nere      Nere      Nere      Nere     Nere    |
 | b    0700-1630|9.5   Monin     Monin     Monin     Monin    Monin   |
-| c    1000-1400|4.0+  []        Bea       Bea       Bea      Bea     |
+| c    1000-1400|4.0+  []        Bea       []        Bea      Bea     |
 |                                                                     |
 |       LC                                                            |
 | d    0700-1400|7.0   Yui       Yui       Sean      Sean     Sean    |
