--- a/roster.html
+++ b/roster.html
@@ -183,7 +183,7 @@ alt="shopify traffic stats"></a></div></noscript>
 B3 ROSTER
 
 <b>Status</b> -     Draft
-        <b><mark>>> Pending Confirmation <<</mark></b>
+           <b><mark>>> Pending Confirmation <<</mark></b>
              Final
              <!-- col: 14, 38 -->
 <!-- <span id = "paraChangelog" style = "display:none">    -->
@@ -321,6 +321,23 @@ before too long.
 |       LC                                                            |
 | d    0700-1400|7.0   Yui       Yui       Sean      Sean     Sean    |
 | c'   1400-1500|+1.0  []        Bea       []        Bea      Bea     |
+|                                                                     |
+|=====================================================================|
+
+|=====================================================================|
+| For week starting    Mon       20/07/20  DRAFT                      |
+|=====================================================================|
+| Pos   Time           Mon       Tue       Wed       Thu      Fri     |
+|---------------------------------------------------------------------|
+|=====================================================================|
+|       CP                                                            |
+| a    0700-1630|9.5   Nere      Nere      Nere      Nere     Nere    |
+| b    0700-1630|9.5   Monin     Monin     Monin     Monin    Monin   |
+| c    1000-1400|4.0+  Bea       Bea       []        []       Bea     |
+|                                                                     |
+|       LC                                                            |
+| d    0700-1400|7.0   Yui       Yui       Sean      Sean     Sean    |
+| c'   1400-1500|+1.0  Bea       Bea       []        []       Bea     |
 |                                                                     |
 |=====================================================================|</em>
 <!--
