--- a/roster.html
+++ b/roster.html
@@ -183,11 +183,12 @@ alt="shopify traffic stats"></a></div></noscript>
 B3 ROSTER
 
 <b>Status</b> -     Draft
-          <b><mark>>> Pending Confirmation <<</mark></b>
-             Final
+             Pending Confirmation
+        <b><mark>>> Final <<</mark></b>
              <!-- col: 14, 38 -->
 <!-- <span id = "paraChangelog" style = "display:none">    -->
-<b>Changelog</b> -  #2 (Sun 12/07, 09:46)   [Pending Confirmation]
+<b>Changelog</b> -  #3 (Sun 12/07, 13:52)   [Final]<span id = "paraChangelog" style = "display:none">
+             #2 (Sun 12/07, 09:46)   [Pending Confirmation]
                                      Draft #2
              #1 (Sat 11/07, 09:50)   Draft #1</span>
 <span id = "mydivChangelog" style = "cursor:hand;color:royalblue" onclick = "expandContractChangelog();">             [+]</span>
@@ -294,9 +295,6 @@ B3 ROSTER
         Whitney - <a href="tel:+61433088706">0433 088 706</a>
         Dad - <a href="tel:+61434824911">0434 824 911</a>
         Mum - <a href="tel:+61435246867">0435 246 867</a>
-      Jean - <a href="tel:+61413633139">0413 633 139</a>
-        Millie - <a href="tel:+61477088778">0477 088 778</a>
-      Sean - <a href="tel:+61411823891">0411 823 891</a>
       </div>
 <b>THIS week's
 notes        </b><span id = "mydivNotes" style = "cursor:hand;color:royalblue" onclick = "expandContractNotes();">[+] </span> <span id="LastUpdateLegend"> (checking..) </span>
