--- a/roster.html
+++ b/roster.html
@@ -331,11 +331,11 @@ before too long.
 |       CP                                                            |
 | a    0700-1630|9.5   Nere      Nere      Nere      Nere     Nere    |
 | b    0700-1630|9.5   Monin     Monin     Monin     Monin    Monin   |
-| c    1000-1400|4.0+  Bea       Bea       []        []       Bea     |
+| c    1000-1400|4.0+  []        Bea       Bea       []       Bea     |
 |                                                                     |
 |       LC                                                            |
-| d    0700-1400|7.0   Yui       Yui       Sean      Sean     Sean    |
-| c'   1400-1500|+1.0  Bea       Bea       []        []       Bea     |
+| d    0700-1400|7.0   Sean      Yui       Yui       Sean     Sean    |
+| c'   1400-1500|+1.0  Bea       Bea       Bea       []       Bea     |
 |                                                                     |
 |=====================================================================|</em>
 <!--
