--- a/roster.html
+++ b/roster.html
@@ -182,15 +182,12 @@ alt="shopify traffic stats"></a></div></noscript>
 
 B3 ROSTER
 
-<b>Status</b> -     Draft
+<b>Status</b> -  <b><mark>>> Draft <<</mark></b>
              Pending Confirmation
-          <b><mark>>> Final <<</mark></b>
+             Final
              <!-- col: 14, 38 -->
 <!-- <span id = "paraChangelog" style = "display:none">    -->
-<b>Changelog</b> -  #3 (Sun 12/07, 13:52)   [Final]<span id = "paraChangelog" style = "display:none">
-             #2 (Sun 12/07, 09:46)   [Pending Confirmation]
-                                     Draft #2
-             #1 (Sat 11/07, 09:50)   Draft #1</span>
+<b>Changelog</b> -  #1 (Sat 18/07, 09:54)   Draft #1</span>
 <span id = "mydivChangelog" style = "cursor:hand;color:royalblue" onclick = "expandContractChangelog();">             [+]</span>
 
 <b>Photos</b> -     <a href="https://www.flickr.com/gp/131712031@N02/Ft83xa">2014</a>, <a href="https://www.flickr.com/gp/131712031@N02/C314Q0">2015</a>, <a href="https://www.flickr.com/gp/131712031@N02/vtX8i9" target="_blank">2016</a>, <!--<a href="https://flic.kr/s/aHskUctFbt" target="_blank">2017</a>--><a href="https://unit-zero.myDS.me/photo/?t=Albums/album_62332032303137#Albums/album_62332032303137" target="_blank"><b>2017</b></a>, <a href="https://unit-zero.myDS.me/photo/?t=Albums/album_62332032303138#Albums/album_62332032303138" target="_blank"><b>2018</b></a>, <a href="https://unit-zero.myDS.me:5001/mo/sharing/BjnSIvuRa" target="_blank"><b>2019</b></a><span id="LastUpdatePhotos">(checking...)</span>
@@ -300,30 +297,11 @@ B3 ROSTER
 notes        </b><span id = "mydivNotes" style = "cursor:hand;color:royalblue" onclick = "expandContractNotes();">[+] </span> <span id="LastUpdateLegend"> (checking..) </span>
 <span id = "paraNotes" style = "display:none"></span>
 
-Back to work !! We do not know how busy it will be, but the sooner
-businesses are open, the sooner people will come back into the city.
-It's going to be quiet for a while, but hopefully will be busy again
-before too long.
+Hey guys, be aware that stage 4 restrictions could happen at any time
+but until then, here is the roster !
 
 |=====================================================================|
-| For week starting    Mon       13/07/20                             |
-|=====================================================================|
-| Pos   Time           Mon       Tue       Wed       Thu      Fri     |
-|---------------------------------------------------------------------|
-|=====================================================================|
-|       CP                                                            |
-| a    0700-1630|9.5   Nere      Nere      Nere      Nere     Nere    |
-| b    0700-1630|9.5   Monin     Monin     Monin     Monin    Monin   |
-| c    1000-1400|4.0+  []        Bea       []        Bea      Bea     |
-|                                                                     |
-|       LC                                                            |
-| d    0700-1400|7.0   Yui       Yui       Sean      Sean     Sean    |
-| c'   1400-1500|+1.0  []        Bea       []        Bea      Bea     |
-|                                                                     |
-|=====================================================================|
-
-|=====================================================================|
-| For week starting    Mon       20/07/20  DRAFT                      |
+| For week starting    Mon       20/07/20                             |
 |=====================================================================|
 | Pos   Time           Mon       Tue       Wed       Thu      Fri     |
 |---------------------------------------------------------------------|
