--- a/roster.html
+++ b/roster.html
@@ -183,9 +183,9 @@ alt="shopify traffic stats"></a></div></noscript>
 B3 ROSTER
 
 <b>Status</b> -     Draft
-         <b><mark>>> Pending Confirmation <<</mark></b>
+          <b><mark>>> Pending Confirmation <<</mark></b>
              Final
-             <!-- col: 14, 38 -->
+             <!-- col: 14, 38. for marked line, < starts at 11 -->
 <!-- <span id = "paraChangelog" style = "display:none">    -->
 <b>Changelog</b> -  #2 (Sun 19/07, 13:33)   [Pending Confirmation]
              #1 (Sat 18/07, 09:54)   Draft #1</span>
