--- a/roster.html
+++ b/roster.html
@@ -301,6 +301,10 @@ notes        </b><span id = "mydivNotes" style = "cursor:hand;color:royalblue" o
 Hey guys, be aware that stage 4 restrictions could happen at any time
 but until then, here is the roster !
 
+We will be wearing masks at work from Monday 20/07. <b>It is now
+mandatory to wear them, otherwie <mark> $200 fine </mark></b>. Please be sure to prepare
+them yourself. If you need one we will have some at the shop.
+
 |=====================================================================|
 | For week starting    Mon       20/07/20                             |
 |=====================================================================|
