--- a/roster.html
+++ b/roster.html
@@ -302,8 +302,8 @@ Hey guys, be aware that stage 4 restrictions could happen at any time
 but until then, here is the roster !
 
 We will be wearing masks at work from Monday 20/07. <b>It is now
-mandatory to wear them, otherwie <mark> $200 fine </mark></b>. Please be sure to prepare
-them yourself. If you need one we will have some at the shop.
+mandatory to wear them, otherwie <mark> $200 fine </mark></b>. Please
+prepare one for yourself. We will have spare masks at the shop !
 
 |=====================================================================|
 | For week starting    Mon       20/07/20                             |
@@ -318,7 +318,7 @@ them yourself. If you need one we will have some at the shop.
 |                                                                     |
 |       LC                                                            |
 | d    0700-1400|7.0   Sean      Yui       Yui       Sean     Sean    |
-| c'   1400-1500|+1.0  Bea       Bea       Bea       []       Bea     |
+| c'   1400-1500|+1.0  []        Bea       Bea       []       Bea     |
 |                                                                     |
 |=====================================================================|</em>
 <!--
