--- a/roster.html
+++ b/roster.html
@@ -302,8 +302,8 @@ Hey guys, be aware that stage 4 restrictions could happen at any time
 but until then, here is the roster !
 
 We will be wearing masks at work from Monday 20/07. <b>It is now
-mandatory to wear them, otherwie <mark> $200 fine </mark></b>. Please
-prepare one for yourself. We will have spare masks at the shop !
+mandatory to wear them, otherwie <mark> $200 fine </mark></b>. Please prepare one
+for yourself. We will have spare masks at the shop !
 
 |=====================================================================|
 | For week starting    Mon       20/07/20                             |
