--- a/roster.html
+++ b/roster.html
@@ -298,8 +298,8 @@ B3 ROSTER
 notes        </b><span id = "mydivNotes" style = "cursor:hand;color:royalblue" onclick = "expandContractNotes();">[+] </span> <span id="LastUpdateLegend"> (checking..) </span>
 <span id = "paraNotes" style = "display:none"></span>
 
-Hey guys, be aware that stage 4 restrictions could happen at any time
-but until then, here is the roster !
+Hey guys, be aware that stage 4 restrictions could happen at any
+time but until then, here is the roster !
 
 We will be wearing masks at work from Monday 20/07. <b>It is now
 mandatory to wear them, otherwie <mark> $200 fine </mark></b>. Please prepare one
