--- a/roster.html
+++ b/roster.html
@@ -301,9 +301,9 @@ notes        </b><span id = "mydivNotes" style = "cursor:hand;color:royalblue" o
 Hey guys, be aware that stage 4 restrictions could happen at any
 time but until then, here is the roster !
 
-We will be wearing masks at work from Monday 20/07. <b>It is now
-mandatory to wear them, otherwie <mark> $200 fine </mark></b>. Please prepare one
-for yourself. We will have spare masks at the shop !
+From this week Wednesday night, <b>it will be mandatory to wear masks,
+otherwise <mark> $200 fine </mark></b>. Please prepare one for yourself.
+We will have spare masks at the shop !
 
 |=====================================================================|
 | For week starting    Mon       20/07/20                             |
