--- a/roster.html
+++ b/roster.html
@@ -302,8 +302,8 @@ Hey guys, be aware that stage 4 restrictions could happen at any
 time but until then, here is the roster !
 
 From this week Wednesday night, <b>it will be mandatory to wear masks,
-otherwise <mark> $200 fine </mark></b>. Please prepare one for yourself.
-We will have spare masks at the shop !
+otherwise <mark> $200 fine </mark></b>. Please prepare one for yourself. We will have
+spare masks at the shop !
 
 |=====================================================================|
 | For week starting    Mon       20/07/20                             |
