--- a/roster.html
+++ b/roster.html
@@ -183,11 +183,12 @@ alt="shopify traffic stats"></a></div></noscript>
 B3 ROSTER
 
 <b>Status</b> -     Draft
-          <b><mark>>> Pending Confirmation <<</mark></b>
-             Final
+             Pending Confirmation
+          <b><mark>>> Final <<</mark></b>
              <!-- col: 14, 38. for marked line, < starts at 11 -->
 <!-- <span id = "paraChangelog" style = "display:none">    -->
-<b>Changelog</b> -  #2 (Sun 19/07, 13:33)   [Pending Confirmation]
+<b>Changelog</b> -  #3 (Sun 19/07, 15:34)   [Final]<span id = "paraChangelog" style = "display:none">
+             #2 (Sun 19/07, 13:33)   [Pending Confirmation]
              #1 (Sat 18/07, 09:54)   Draft #1</span>
 <span id = "mydivChangelog" style = "cursor:hand;color:royalblue" onclick = "expandContractChangelog();">             [+]</span>
 
