--- a/roster.html
+++ b/roster.html
@@ -303,11 +303,29 @@ Hey guys, be aware that stage 4 restrictions could happen at any
 time but until then, here is the roster !
 
 From this week Wednesday night, <b>it will be mandatory to wear masks
-in Melbourne otherwise <mark> $200 fine </mark></b> - check news. Please prepare
-one for yourself. We will also have spare masks at the shop !
+in Melbourne otherwise <mark> $200 fine </mark></b> - check news. We will starts
+to wear masks from Monday 20 July. Please prepare one for yourself.
+We will also have spare masks at the shop !
 
 |=====================================================================|
 | For week starting    Mon       20/07/20                             |
+|=====================================================================|
+| Pos   Time           Mon       Tue       Wed       Thu      Fri     |
+|---------------------------------------------------------------------|
+|=====================================================================|
+|       CP                                                            |
+| a    0700-1630|9.5   Nere      Nere      Nere      Nere     Nere    |
+| b    0700-1630|9.5   Monin     Monin     Monin     Monin    Monin   |
+| c    1000-1400|4.0+  []        Bea       Bea       []       Bea     |
+|                                                                     |
+|       LC                                                            |
+| d    0700-1400|7.0   Sean      Yui       Yui       Sean     Sean    |
+| c'   1400-1500|+1.0  []        Bea       Bea       []       Bea     |
+|                                                                     |
+|=====================================================================|
+
+|=====================================================================|
+| For week starting    Mon       27/07/20 DRAFT                       |
 |=====================================================================|
 | Pos   Time           Mon       Tue       Wed       Thu      Fri     |
 |---------------------------------------------------------------------|
