--- a/roster.html
+++ b/roster.html
@@ -324,6 +324,8 @@ We will also have spare masks at the shop !
 |                                                                     |
 |=====================================================================|
 
+
+Mon * Bea  |CP 1000-1600 (6.0)
 |=====================================================================|
 | For week starting    Mon       27/07/20 DRAFT                       |
 |=====================================================================|
@@ -333,11 +335,10 @@ We will also have spare masks at the shop !
 |       CP                                                            |
 | a    0700-1630|9.5   Nere      Nere      Nere      Nere     Nere    |
 | b    0700-1630|9.5   Monin     Monin     Monin     Monin    Monin   |
-| c    1000-1400|4.0+  []        Bea       Bea       []       Bea     |
+| c    1000-1500|5.0   Bea*      []        Bea       Bea      []      |
 |                                                                     |
 |       LC                                                            |
-| d    0700-1400|7.0   Sean      Yui       Yui       Sean     Sean    |
-| c'   1400-1500|+1.0  []        Bea       Bea       []       Bea     |
+| d    0700-1400|7.0   Sean      Sean      Yui       Yui      Sean    |
 |                                                                     |
 |=====================================================================|</em>
 <!--
