--- a/roster.html
+++ b/roster.html
@@ -183,13 +183,12 @@ alt="shopify traffic stats"></a></div></noscript>
 B3 ROSTER
 
 <b>Status</b> -     Draft
-             Pending Confirmation
-          <b><mark>>> Final <<</mark></b>
+          <b><mark>>> Pending Confirmation <<</mark></b>
+             Final
              <!-- col: 14, 38. for marked line, < starts at 11 -->
 <!-- <span id = "paraChangelog" style = "display:none">    -->
-<b>Changelog</b> -  #3 (Sun 19/07, 15:34)   [Final]<span id = "paraChangelog" style = "display:none">
-             #2 (Sun 19/07, 13:33)   [Pending Confirmation]
-             #1 (Sat 18/07, 09:54)   Draft #1</span>
+<b>Changelog</b> -  #1 (Sun 26/07, 08:23)   [Pending Confirmation]
+                                     Draft #1</span>
 <span id = "mydivChangelog" style = "cursor:hand;color:royalblue" onclick = "expandContractChangelog();">             [+]</span>
 
 <b>Photos</b> -     <a href="https://www.flickr.com/gp/131712031@N02/Ft83xa">2014</a>, <a href="https://www.flickr.com/gp/131712031@N02/C314Q0">2015</a>, <a href="https://www.flickr.com/gp/131712031@N02/vtX8i9" target="_blank">2016</a>, <!--<a href="https://flic.kr/s/aHskUctFbt" target="_blank">2017</a>--><a href="https://unit-zero.myDS.me/photo/?t=Albums/album_62332032303137#Albums/album_62332032303137" target="_blank"><b>2017</b></a>, <a href="https://unit-zero.myDS.me/photo/?t=Albums/album_62332032303138#Albums/album_62332032303138" target="_blank"><b>2018</b></a>, <a href="https://unit-zero.myDS.me:5001/mo/sharing/BjnSIvuRa" target="_blank"><b>2019</b></a><span id="LastUpdatePhotos">(checking...)</span>
@@ -301,29 +300,6 @@ notes        </b><span id = "mydivNotes" style = "cursor:hand;color:royalblue" o
 
 Hey guys, be aware that stage 4 restrictions could happen at any
 time but until then, here is the roster !
-
-From this week Wednesday night, <b>it will be mandatory to wear masks
-in Melbourne otherwise <mark> $200 fine </mark></b> - check news. We will starts
-to wear masks from Monday 20 July. Please prepare one for yourself.
-We will also have spare masks at the shop !
-
-|=====================================================================|
-| For week starting    Mon       20/07/20                             |
-|=====================================================================|
-| Pos   Time           Mon       Tue       Wed       Thu      Fri     |
-|---------------------------------------------------------------------|
-|=====================================================================|
-|       CP                                                            |
-| a    0700-1630|9.5   Nere      Nere      Nere      Nere     Nere    |
-| b    0700-1630|9.5   Monin     Monin     Monin     Monin    Monin   |
-| c    1000-1400|4.0+  []        Bea       Bea       []       Bea     |
-|                                                                     |
-|       LC                                                            |
-| d    0700-1400|7.0   Sean      Yui       Yui       Sean     Sean    |
-| c'   1400-1500|+1.0  []        Bea       Bea       []       Bea     |
-|                                                                     |
-|=====================================================================|
-
 
 Mon * Bea  |CP 1000-1600 (6.0)
 |=====================================================================|
