--- a/roster.html
+++ b/roster.html
@@ -301,7 +301,10 @@ notes        </b><span id = "mydivNotes" style = "cursor:hand;color:royalblue" o
 Hey guys, be aware that stage 4 restrictions could happen at any
 time but until then, here is the roster !
 
-Mon * Bea  |CP 1000-1600 (6.0)
+Mon  &  Whitney leaving early to take mum to doctors. Whitney leaving
+        shop at around 13:30. 
+
+     *  Bea  |CP 1000-1600 (6.0)
 |=====================================================================|
 | For week starting    Mon       27/07/20 DRAFT                       |
 |=====================================================================|
@@ -309,7 +312,7 @@ Mon * Bea  |CP 1000-1600 (6.0)
 |---------------------------------------------------------------------|
 |=====================================================================|
 |       CP                                                            |
-| a    0700-1630|9.5   Nere      Nere      Nere      Nere     Nere    |
+| a    0700-1630|9.5   Nere&     Nere      Nere      Nere     Nere    |
 | b    0700-1630|9.5   Monin     Monin     Monin     Monin    Monin   |
 | c    1000-1500|5.0   Bea*      []        Bea       Bea      []      |
 |                                                                     |
