--- a/roster.html
+++ b/roster.html
@@ -302,11 +302,11 @@ Hey guys, be aware that stage 4 restrictions could happen at any
 time but until then, here is the roster !
 
 Mon  &  Whitney leaving early to take mum to doctors. Whitney leaving
-        shop at around 13:30. 
+        shop at around 13:30.
 
      *  Bea  |CP 1000-1600 (6.0)
 |=====================================================================|
-| For week starting    Mon       27/07/20 DRAFT                       |
+| For week starting    Mon       27/07/20                             |
 |=====================================================================|
 | Pos   Time           Mon       Tue       Wed       Thu      Fri     |
 |---------------------------------------------------------------------|
