--- a/roster.html
+++ b/roster.html
@@ -319,7 +319,24 @@ Mon  &  Whitney leaving early to take mum to doctors. Whitney leaving
 |       LC                                                            |
 | d    0700-1400|7.0   Sean      Sean      Yui       Yui      Sean    |
 |                                                                     |
-|=====================================================================|</em>
+|=====================================================================|
+
+|=====================================================================|
+| For week starting    Mon       03/08/20  DRAFT                      |
+|=====================================================================|
+| Pos   Time           Mon       Tue       Wed       Thu      Fri     |
+|---------------------------------------------------------------------|
+|=====================================================================|
+|       CP                                                            |
+| a    0700-1630|9.5   Nere      Nere      Nere      Nere     Nere    |
+| b    0700-1630|9.5   Monin     Monin     Monin     Monin    Monin   |
+| c    1000-1500|5.0   Bea       Bea       []        []       Bea     |
+|                                                                     |
+|       LC                                                            |
+| d    0700-1400|7.0   Yui       Yui       Sean      Sean     Sean    |
+|                                                                     |
+|=====================================================================|
+</em>
 <!--
 |=====================================================================|
 | For week starting    Mon       23/03/20                             |
