--- a/roster.html
+++ b/roster.html
@@ -187,7 +187,8 @@ B3 ROSTER
              Final
              <!-- col: 14, 38. for marked line, < starts at 11 -->
 <!-- <span id = "paraChangelog" style = "display:none">    -->
-<b>Changelog</b> -  #1 (Sun 26/07, 08:23)   [Pending Confirmation]
+<b>Changelog</b> -  #2 (Sun 26/07, 11:24)   Draft #2
+             #1 (Sun 26/07, 08:23)   [Pending Confirmation]
                                      Draft #1</span>
 <span id = "mydivChangelog" style = "cursor:hand;color:royalblue" onclick = "expandContractChangelog();">             [+]</span>
 
@@ -317,7 +318,7 @@ Mon  &  Whitney leaving early to take mum to doctors. Whitney leaving
 | c    1000-1500|5.0   Bea*      []        Bea       Bea      []      |
 |                                                                     |
 |       LC                                                            |
-| d    0700-1400|7.0   Sean      Sean      Yui       Yui      Sean    |
+| d    0700-1400|7.0   Sean      Yui       Yui       Sean     Sean    |
 |                                                                     |
 |=====================================================================|
 
