--- a/roster.html
+++ b/roster.html
@@ -183,11 +183,12 @@ alt="shopify traffic stats"></a></div></noscript>
 B3 ROSTER
 
 <b>Status</b> -     Draft
-          <b><mark>>> Pending Confirmation <<</mark></b>
-             Final
-             <!-- col: 14, 38. for marked line, < starts at 11 -->
+             Pending Confirmation
+        <b><mark>>> Final <<</mark></b>
+             <!-- col: 14, 38. for <mark>ed line, above, < starts at 11 -->
 <!-- <span id = "paraChangelog" style = "display:none">    -->
-<b>Changelog</b> -  #2 (Sun 26/07, 11:24)   Draft #2
+<b>Changelog</b> -  #3 (Sun 26/07, 12:07)   [Final]<span id = "paraChangelog" style = "display:none">
+             #2 (Sun 26/07, 11:24)   Draft #2
              #1 (Sun 26/07, 08:23)   [Pending Confirmation]
                                      Draft #1</span>
 <span id = "mydivChangelog" style = "cursor:hand;color:royalblue" onclick = "expandContractChangelog();">             [+]</span>
@@ -302,8 +303,8 @@ notes        </b><span id = "mydivNotes" style = "cursor:hand;color:royalblue" o
 Hey guys, be aware that stage 4 restrictions could happen at any
 time but until then, here is the roster !
 
-Mon  &  Whitney leaving early to take mum to doctors. Whitney leaving
-        shop at around 13:30.
+Mon  &  Whitney leaving early to take mum to doctors. Whitney
+        leaving shop at around 13:30, just a check up.
 
      *  Bea  |CP 1000-1600 (6.0)
 |=====================================================================|
