--- a/roster.html
+++ b/roster.html
@@ -187,7 +187,8 @@ B3 ROSTER
           <b><mark>>> Final <<</mark></b>
              <!-- col: 14, 38. for <mark>ed line, above, < starts at 11 -->
 <!-- <span id = "paraChangelog" style = "display:none">    -->
-<b>Changelog</b> -  #3 (Sun 26/07, 12:07)   [Final]<span id = "paraChangelog" style = "display:none">
+<b>Changelog</b> -  #4 (Thu 29/07, 08:18)   Swap Bea Thu -> Fri
+             #3 (Sun 26/07, 12:07)   [Final]<span id = "paraChangelog" style = "display:none">
              #2 (Sun 26/07, 11:24)   Draft #2
              #1 (Sun 26/07, 08:23)   [Pending Confirmation]
                                      Draft #1</span>
@@ -316,7 +317,7 @@ Mon  &  Whitney leaving early to take mum to doctors. Whitney
 |       CP                                                            |
 | a    0700-1630|9.5   Nere&     Nere      Nere      Nere     Nere    |
 | b    0700-1630|9.5   Monin     Monin     Monin     Monin    Monin   |
-| c    1000-1500|5.0   Bea*      []        Bea       Bea      []      |
+| c    1000-1500|5.0   Bea*      []        Bea       []       Bea     |
 |                                                                     |
 |       LC                                                            |
 | d    0700-1400|7.0   Sean      Yui       Yui       Sean     Sean    |
