--- a/roster.html
+++ b/roster.html
@@ -182,12 +182,13 @@ alt="shopify traffic stats"></a></div></noscript>
 
 B3 ROSTER
 
-<b>Status</b> -  <b><mark>>> Draft <<</mark></b>
-             Pending Confirmation
+<b>Status</b> -     Draft
+          <b><mark>>> Pending Confirmation <<</mark></b> (left: 3)
              Final
              <!-- col: 14, 38. for <mark>ed line, above, < starts at 11 -->
 <!-- <span id = "paraChangelog" style = "display:none">    -->
-<b>Changelog</b> -  #1 (Sat 01/08, 09:03)   Draft #1</span>
+<b>Changelog</b> -  #2 (Sun 02/08, 08:32)   [Pending Confirmation]
+             #1 (Sat 01/08, 09:03)   Draft #1</span>
 <span id = "mydivChangelog" style = "cursor:hand;color:royalblue" onclick = "expandContractChangelog();">             [+]</span>
 
 <b>Photos</b> -     <a href="https://www.flickr.com/gp/131712031@N02/Ft83xa">2014</a>, <a href="https://www.flickr.com/gp/131712031@N02/C314Q0">2015</a>, <a href="https://www.flickr.com/gp/131712031@N02/vtX8i9" target="_blank">2016</a>, <!--<a href="https://flic.kr/s/aHskUctFbt" target="_blank">2017</a>--><a href="https://unit-zero.myDS.me/photo/?t=Albums/album_62332032303137#Albums/album_62332032303137" target="_blank"><b>2017</b></a>, <a href="https://unit-zero.myDS.me/photo/?t=Albums/album_62332032303138#Albums/album_62332032303138" target="_blank"><b>2018</b></a>, <a href="https://unit-zero.myDS.me:5001/mo/sharing/BjnSIvuRa" target="_blank"><b>2019</b></a><span id="LastUpdatePhotos">(checking...)</span>
@@ -301,7 +302,7 @@ Hey guys, be aware that stage 4 restrictions could happen
 at any time but until then, here is the roster !
 
 |=====================================================================|
-| For week starting    Mon       03/08/20  DRAFT                      |
+| For week starting    Mon       03/08/20                             |
 |=====================================================================|
 | Pos   Time           Mon       Tue       Wed       Thu      Fri     |
 |---------------------------------------------------------------------|
@@ -315,6 +316,23 @@ at any time but until then, here is the roster !
 | d    0700-1400|7.0   Yui       Yui       Sean      Sean     Sean    |
 |                                                                     |
 |=====================================================================|
+
+|=====================================================================|
+| For week starting    Mon       10/08/20 DRAFT                       |
+|=====================================================================|
+| Pos   Time           Mon       Tue       Wed       Thu      Fri     |
+|---------------------------------------------------------------------|
+|=====================================================================|
+|       CP                                                            |
+| a    0700-1630|9.5   Nere      Nere      Nere      Nere     Nere    |
+| b    0700-1630|9.5   Monin     Monin     Monin     Monin    Monin   |
+| c    1000-1500|5.0   Bea       Bea       []        []       Bea     |
+|                                                                     |
+|       LC                                                            |
+| d    0700-1400|7.0   Yui       Yui       Sean      Sean     Sean    |
+|                                                                     |
+|=====================================================================|
+
 </em>
 <!--
 |=====================================================================|
