--- a/roster.html
+++ b/roster.html
@@ -183,11 +183,12 @@ alt="shopify traffic stats"></a></div></noscript>
 B3 ROSTER
 
 <b>Status</b> -     Draft
-          <b><mark>>> Pending Confirmation <<</mark></b> (left: 3)
-             Final
-             <!-- col: 14, 38. for <mark>ed line, above, < starts at 11 -->
+             Pending Confirmation
+          <b><mark>>> Final <<</mark></b>
+             <!-- col: 14, 38. for <mark>ed line, above, "<" starts at 11 -->
 <!-- <span id = "paraChangelog" style = "display:none">    -->
-<b>Changelog</b> -  #2 (Sun 02/08, 08:32)   [Pending Confirmation]
+<b>Changelog</b> -  #3 (Sun 02/08, 13:32)   [Final]<span id = "paraChangelog" style = "display:none">
+             #2 (Sun 02/08, 08:32)   [Pending Confirmation]
              #1 (Sat 01/08, 09:03)   Draft #1</span>
 <span id = "mydivChangelog" style = "cursor:hand;color:royalblue" onclick = "expandContractChangelog();">             [+]</span>
 
