--- a/roster.html
+++ b/roster.html
@@ -312,10 +312,10 @@ For the time being, CP will be closing at 13:00.
 |=====================================================================|
 |       CP                                                            |
 | a    0700-1330|6.5   Nere      Nere      Nere      Nere     Nere    |
-| b    0700-1330|6.5   Bea       Bea       Bea       Sean     Bea     |
+| b    0700-1330|6.5   Bea       Bea       Bea       []       Bea     |
 |                                                                     |
 |       LC                                                            |
-| d    0700-1400|7.0   Yui       Sean      Sean      Yui      Sean    |
+| d    0700-1400|7.0   Yui       Sean      Sean      Sean     Sean    |
 |                                                                     |
 |=====================================================================|
 
