--- a/roster.html
+++ b/roster.html
@@ -298,9 +298,10 @@ B3 ROSTER
 notes        </b><span id = "mydivNotes" style = "cursor:hand;color:royalblue" onclick = "expandContractNotes();">[+] </span> <span id="LastUpdateLegend"> (checking..) </span>
 <span id = "paraNotes" style = "display:none"></span>
 
-Hey guys, we will try this coming week to see how the trade is.
-If it's really shit, we will close the shops. Until then, here
-is the roster !
+Hey guys, we will try this coming week to see how the trade is. If
+it's really shit mid-week, then we will close the shops. This could
+be any day, e.g. if Monday and Tuesday are not good, we will close
+from Wednesday. Until then, here is the roster !
 
 For the time being, CP will be closing at 13:00.
 
