--- a/roster.html
+++ b/roster.html
@@ -187,7 +187,8 @@ B3 ROSTER
           <b><mark>>> Final <<</mark></b>
              <!-- col: 14, 38. for <mark>ed line, above, "<" starts at 11 -->
 <!-- <span id = "paraChangelog" style = "display:none">    -->
-<b>Changelog</b> -  #4 (Mon 10/08, 12:15)   Monin covered for Bea, Mon. Time changes for CP
+<b>Changelog</b> -  #5 (Mon 10/08, 19:49)   CP closing for now :( Changes for Tue-Fri
+             #4 (Mon 10/08, 12:15)   Monin covered for Bea, Mon. Time changes for CP
              #3 (Sun 09/08, 13:10)   [Final]<span id = "paraChangelog" style = "display:none">
              #2 (Sun 09/08, 08:18)   [Pending Confirmation]
              #1 (Sat 08/08, 13:30)   Draft #1</span>
@@ -314,11 +315,11 @@ For the time being, CP will be closing at 13:00.
 |---------------------------------------------------------------------|
 |=====================================================================|
 |       CP                                                            |
-| a    0700-1400|7.0   Nere      Nere      Nere      Nere     Nere    |
-| b    0700-1400|7.0   Monin     Bea       Bea       []       Bea     |
+| a    0700-1400|7.0   Nere      /         /         /        /       |
+| b    0700-1400|7.0   Monin     /         /         /        /       |
 |                                                                     |
 |       LC                                                            |
-| d    0700-1400|7.0   Yui       Sean      Sean      Sean     Sean    |
+| d    0700-1400|7.0   Yui       Nere      Nere      Nere     Nere    |
 |                                                                     |
 |=====================================================================|
 
