--- a/roster.html
+++ b/roster.html
@@ -187,8 +187,10 @@ B3 ROSTER
           <b><mark>>> Final <<</mark></b>
              <!-- col: 14, 38. for <mark>ed line, above, "<" starts at 11 -->
 <!-- <span id = "paraChangelog" style = "display:none">    -->
-<b>Changelog</b> -  #5 (Mon 10/08, 19:49)   CP closing for now :( Changes for Tue-Fri
-             #4 (Mon 10/08, 12:15)   Monin covered for Bea, Mon. Time changes for CP
+<b>Changelog</b> -  #5 (Mon 10/08, 19:49)   CP closing for now :(
+                                     Changes for Tue-Fri
+             #4 (Mon 10/08, 12:15)   Monin covered for Bea, Mon.
+                                     Time changes for CP
              #3 (Sun 09/08, 13:10)   [Final]<span id = "paraChangelog" style = "display:none">
              #2 (Sun 09/08, 08:18)   [Pending Confirmation]
              #1 (Sat 08/08, 13:30)   Draft #1</span>
